--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
             // Replace this with an array of birthday quotes
             var quotes = [
-                "May your day be filled with joy and laughter!",
-                "Wishing you a year full of happiness and success.",
-                "Another year older, but wiser and better!",
-                "Here's to another year of amazing adventures!",
-                "May your birthday be as special as you are!",
+                "Selamat ulang tahun, sayang! Semoga seiring bertambahnya usia, bertambah pula rasa syukur atas segala berkah di dalam hidup. Semoga juga doamu menjadi nyata.",
+                "Aku punya doa buat kamu hari ini. Semoga kamu senantiasa berbahagia dan terus tersenyum seperti yang biasa kamu lakukan. Selamat ulang tahun!",
+                "Aku adalah orang yang paling beruntung di dunia karena aku memiliki orang yang paling luar biasa di sisiku. Terima kasih telah menjadi batu karangku. Selamat ulang tahun.",
+                "Selamat ulang tahun untuk seseorang yang istimewa yang membawa begitu banyak kebahagiaan di hatiku. Aku bersyukur untuk setiap momen yang kita habiskan bersama, dan aku berharap kebahagiaan kita tidak akan pernah berakhir.",
+                "Sayangku, hari ini adalah hari ulang tahunmu dan aku berdoa kepada Tuhan agar hari ini menjadi sangat istimewa dan sangat cerah untukmu. Selamat ulang tahun, Sayangku!",
             ];
 
             // Get a random quote from the array
@@ -94,7 +94,7 @@
 <body>
     <div id="content-container">
         <button id="birthday-button" onclick="displayBirthday()">Click to Celebrate</button>
-        <h1 id="birthday-text" style="display: none;">Happy Birthday!</h1>
+        <h1 id="birthday-text" style="display: none;">Happy Birthday Sayangku Cica ❤️😘!</h1>
         <img id="birthday-gif" style="display: none;" src="https://media.tenor.com/1Z7EJnXM8c8AAAAC/happy-birthday.gif" alt="Birthday GIF">
         <div id="quote" style="display: none;"></div>
     </div>
