--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             birthdayGIF.style.display = "block";
             quote.style.display = "block";
 
+            // Create an <audio> element for the birthday song
+            var audio = document.createElement("audio");
+            audio.src = "happy.mp3"; // Replace with the actual URL
+            audio.controls = true; // Add audio controls (play, pause, volume)
+            audio.autoplay = true; // Auto-play the song
+
             // Replace this with an array of birthday quotes
             var quotes = [
                 "Selamat ulang tahun, sayang! Semoga seiring bertambahnya usia, bertambah pula rasa syukur atas segala berkah di dalam hidup. Semoga juga doamu menjadi nyata.",
@@ -88,13 +94,17 @@
             var h3 = document.createElement("h3");
             h3.textContent = randomQuote;
             quote.appendChild(h3);
+
+            // Append the audio element to the content container
+            var contentContainer = document.getElementById("content-container");
+            contentContainer.appendChild(audio);
         }
     </script>
 </head>
 <body>
     <div id="content-container">
         <button id="birthday-button" onclick="displayBirthday()">Click to Celebrate</button>
-        <h1 id="birthday-text" style="display: none;">Happy Birthday Sayangku Cica ❤️😘!</h1>
+        <h1 id="birthday-text" style="display: none;">Happy Birthday!</h1>
         <img id="birthday-gif" style="display: none;" src="https://media.tenor.com/1Z7EJnXM8c8AAAAC/happy-birthday.gif" alt="Birthday GIF">
         <div id="quote" style="display: none;"></div>
     </div>
