--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
     <div id="content-container">
         <button id="birthday-button" onclick="displayBirthday()">Click to Celebrate</button>
-        <h1 id="birthday-text" style="display: none;">Happy Birthday!</h1>
+        <h1 id="birthday-text" style="display: none;">Happy Birthday! Sayangku Cica 💕😘</h1>
         <img id="birthday-gif" style="display: none;" src="https://media.tenor.com/1Z7EJnXM8c8AAAAC/happy-birthday.gif" alt="Birthday GIF">
         <div id="quote" style="display: none;"></div>
     </div>
